--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,14 +2,14 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "C/C++: g++ build and debug active file",
+            "name": "debug",
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/vgmrender",
             "args": [
-                "01_Opening.vgz",
+                "testdata/01_Opening.vgz",
                 "-o",
-                "01_Opening.wav"
+                "testdata/01_Opening.wav"
             ],
             "stopAtEntry": true,
             "cwd": "${workspaceFolder}",
@@ -24,7 +24,7 @@
                     "ignoreFailures": true
                 }
             ],
-            "preLaunchTask": "C/C++: g++ build active file"
+            "preLaunchTask": "make"
         }
     ]
 }
