Class化（読み込み部以外）成功

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,7 +12,8 @@
                 "panel": "dedicated",
                 "clear": true,
                 "focus": true
-            }
+            },
+            "problemMatcher": []
         }
     ]
 }
